--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -1,8 +1,23 @@
 .admin-container {
   display: flex;
-  .admin-sidebar{
-    .pro-sidebar{
+
+  .admin-sidebar {
+
+    .pro-sidebar {
       height: 100vh !important;
+    }
+  }
+
+  .admin-content {
+    width: 100%;
+    .admin-header {
+      height: 40px;
+      
+      border: 1px solid green;
+    }
+
+    .admin-main {
+      border: 1px solid red;
     }
   }
 }
@@ -11,6 +26,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
   .sidebar-btn {
     transition: width 0.3s;
     width: 150px;
@@ -26,10 +42,12 @@
     justify-content: center;
     text-overflow: ellipsis;
     overflow: hidden;
+
     span {
       margin-left: 5px;
       font-size: 13px;
     }
+
     &:hover {
       color: #dee2ec;
     }
